[gd_scene load_steps=82 format=2]

[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_006.png" type="Texture" id=1]
[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_005.png" type="Texture" id=2]
[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_000.png" type="Texture" id=3]
[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_002.png" type="Texture" id=4]
[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_004.png" type="Texture" id=5]
[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_001.png" type="Texture" id=6]
[ext_resource path="res://CharSprites/Knight1/Attack/_ATTACK_003.png" type="Texture" id=7]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_01.png" type="Texture" id=8]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_03.png" type="Texture" id=9]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_13.png" type="Texture" id=10]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_10.png" type="Texture" id=11]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_05.png" type="Texture" id=12]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_01.png" type="Texture" id=13]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_02.png" type="Texture" id=14]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_11.png" type="Texture" id=15]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_00.png" type="Texture" id=16]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_06.png" type="Texture" id=17]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_09.png" type="Texture" id=18]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_08.png" type="Texture" id=19]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_12.png" type="Texture" id=20]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_04.png" type="Texture" id=21]
[ext_resource path="res://CharSprites/Mob1/Idle/e001a_01idle_07.png" type="Texture" id=22]
[ext_resource path="res://Assets/HPBar/RedBar.png" type="Texture" id=23]
[ext_resource path="res://Scenes/Fight/Fight.gd" type="Script" id=24]
[ext_resource path="res://Assets/HPBar/BlackBar.png" type="Texture" id=25]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_000.png" type="Texture" id=26]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_003.png" type="Texture" id=27]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_002.png" type="Texture" id=28]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_005.png" type="Texture" id=29]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_001.png" type="Texture" id=30]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_006.png" type="Texture" id=31]
[ext_resource path="res://CharSprites/Knight2/Idle/_IDLE_004.png" type="Texture" id=32]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_05.png" type="Texture" id=33]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_00.png" type="Texture" id=34]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_02.png" type="Texture" id=35]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_07.png" type="Texture" id=36]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_01.png" type="Texture" id=37]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_08.png" type="Texture" id=38]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_11.png" type="Texture" id=39]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_09.png" type="Texture" id=40]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_04.png" type="Texture" id=41]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_03.png" type="Texture" id=42]
[ext_resource path="res://CharSprites/Mob1/Hurt/e001a_07damage_10.png" type="Texture" id=43]
[ext_resource path="res://Fonts/snubnose.otf" type="DynamicFontData" id=44]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_02.png" type="Texture" id=45]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_05.png" type="Texture" id=46]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_06.png" type="Texture" id=47]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_07.png" type="Texture" id=48]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_00.png" type="Texture" id=49]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_03.png" type="Texture" id=50]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_04.png" type="Texture" id=51]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_23.png" type="Texture" id=52]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_19.png" type="Texture" id=53]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_001.png" type="Texture" id=54]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_006.png" type="Texture" id=55]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_000.png" type="Texture" id=56]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_10.png" type="Texture" id=57]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_12.png" type="Texture" id=58]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_24.png" type="Texture" id=59]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_17.png" type="Texture" id=60]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_003.png" type="Texture" id=61]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_16.png" type="Texture" id=62]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_20.png" type="Texture" id=63]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_08.png" type="Texture" id=64]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_22.png" type="Texture" id=65]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_09.png" type="Texture" id=66]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_15.png" type="Texture" id=67]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_18.png" type="Texture" id=68]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_21.png" type="Texture" id=69]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_002.png" type="Texture" id=70]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_14.png" type="Texture" id=71]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_004.png" type="Texture" id=72]
[ext_resource path="res://CharSprites/Knight1/Hurt/HURT_005.png" type="Texture" id=73]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_13.png" type="Texture" id=74]
[ext_resource path="res://CharSprites/Mob1/Attack/e001a_20jump_11.png" type="Texture" id=75]
[ext_resource path="res://Scenes/Background/Background.tscn" type="PackedScene" id=76]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=77]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 54 ), ExtResource( 70 ), ExtResource( 61 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 55 ) ],
"loop": true,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 33 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 39 ) ],
"loop": true,
"name": "hurt",
"speed": 15.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 8 ), ExtResource( 45 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 64 ), ExtResource( 66 ), ExtResource( 57 ), ExtResource( 75 ), ExtResource( 58 ), ExtResource( 74 ), ExtResource( 71 ), ExtResource( 67 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 68 ), ExtResource( 53 ), ExtResource( 63 ), ExtResource( 69 ), ExtResource( 65 ), ExtResource( 52 ), ExtResource( 59 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 4
font_data = ExtResource( 44 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 77 )

[node name="Fight" type="Node2D"]
script = ExtResource( 24 )

[node name="Char" type="AnimatedSprite" parent="."]
position = Vector2( 147.999, 428.138 )
scale = Vector2( 0.200627, 0.26248 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="Mob" type="AnimatedSprite" parent="."]
position = Vector2( 533.34, 392.858 )
scale = Vector2( 1.03812, 0.94601 )
frames = SubResource( 2 )
animation = "idle"
frame = 11
playing = true

[node name="Option1" type="Button" parent="."]
margin_left = 36.4776
margin_top = 632.792
margin_right = 73.4776
margin_bottom = 652.792
rect_scale = Vector2( 7, 5 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="."]
margin_left = 356.363
margin_top = 636.893
margin_right = 393.363
margin_bottom = 656.893
rect_scale = Vector2( 7, 5 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="Button" parent="."]
margin_left = 38.5281
margin_top = 802.987
margin_right = 75.5281
margin_bottom = 822.987
rect_scale = Vector2( 7, 5 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option4" type="Button" parent="."]
margin_left = 365.793
margin_top = 800.545
margin_right = 402.793
margin_bottom = 820.545
rect_scale = Vector2( 7, 5 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharHealth" type="TextureProgress" parent="."]
margin_left = -12.0
margin_top = 4.40683
margin_right = 1012.0
margin_bottom = 1028.41
rect_scale = Vector2( 0.35, 0.3 )
value = 100.0
texture_under = ExtResource( 25 )
texture_progress = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobHealth" type="TextureProgress" parent="."]
margin_left = 306.761
margin_top = 4.40683
margin_right = 1330.76
margin_bottom = 1028.41
rect_scale = Vector2( 0.35, 0.3 )
value = 100.0
texture_under = ExtResource( 25 )
texture_progress = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Question" type="Label" parent="."]
margin_left = 24.7271
margin_top = 534.72
margin_right = 628.727
margin_bottom = 618.72
custom_fonts/font = SubResource( 4 )
text = "What is the answer?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question2" type="Label" parent="."]
margin_left = 426.603
margin_top = 806.611
margin_right = 564.603
margin_bottom = 899.611
custom_fonts/font = SubResource( 4 )
text = "Ans4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question3" type="Label" parent="."]
margin_left = 102.911
margin_top = 806.345
margin_right = 240.911
margin_bottom = 899.345
custom_fonts/font = SubResource( 4 )
text = "Ans3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question4" type="Label" parent="."]
margin_left = 421.211
margin_top = 638.519
margin_right = 559.211
margin_bottom = 731.519
custom_fonts/font = SubResource( 4 )
text = "Ans2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question5" type="Label" parent="."]
margin_left = 103.873
margin_top = 639.0
margin_right = 223.873
margin_bottom = 732.0
custom_fonts/font = SubResource( 4 )
text = "Ans1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" parent="." instance=ExtResource( 76 )]
[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_Option3_pressed"]
[connection signal="pressed" from="Option4" to="." method="_on_Option4_pressed"]
